# scene-fingerprint

./: .gitignore  .gitlab-ci.yml  CHANGELOG  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt  run_tests.sh  setup.py
docs/: tutorial_future_paths_lanelet.ipynb  tutorial_quick_start.ipynb  tutorial_test_your_data.ipynb
oncrit/utils/: generate_future_paths.py  helpers.py  lanelet_operation.py  map_generator.py  visualization.py
src/: geometry.rs  lib.rs  scene.rs  utils.rs
src/metrics/: euclidean_distance.rs  metric_base.rs  mod.rs  st_metric.rs
src/scenario_criticality/: base_metric.py
src/scenario_criticality/DummyMetric/: DummyMetric.py
src/scenario_criticality/binary_metrics/: metric_error_codes.md
src/scenario_criticality/binary_metrics/distance/: distance.py  distance_simple.py
src/scenario_criticality/binary_metrics/gap_time/: gap_time.py
src/scenario_criticality/binary_metrics/post_encroachment_time/: et.py  pet.py
src/scenario_criticality/binary_metrics/potential_time_to_collision/: pttc.py
src/scenario_criticality/binary_metrics/time_to_collision/: ttc.py
src/scenario_criticality/binary_metrics/trajectory_distance/: trajectory_distance.py
src/scenario_criticality/binary_metrics/worst_time_to_collision/: wttc.py
src/scenario_criticality/safety_potential/: safety_potential.py
src/scenario_criticality/traffic_quality/: traffic_quality.py
src/utils/: dict_utils.py  geometry.py  kiviat.py  lanelet_tools.py  map_vis_lanelet2.py  map_vis_without_lanelet.py  metric_helper.py  visualization_helper.py
tests/: metricbase_test.py  scene_test.py  test_metrics.py  utils_test.py
tests/data/: ind_check.csv  ind_check.osm  k729_2022-03-16_fix.osm  tracks_cam1_taf_cut.csv
tests/resources/: CarFollowing_001.csv  Intersection_001.csv  meta_data_001.csv  test_tracks_001.csv
